--- a/mrucznikctl/templates/commands.pwn.jinja2
+++ b/mrucznikctl/templates/commands.pwn.jinja2
@@ -19,14 +19,10 @@
 // Kod wygenerowany automatycznie narzędziem Mrucznik CTL
 
 //-------<[ include ]>-------
-{% for command in commands %}
-#include "{{command.name}}/{{command.name}}.pwn"
-{% endfor %}
+{% for command in commands %}#include "{{command.name}}/{{command.name}}.pwn"{% endfor %}
 
 //-------<[ initialize ]>-------
 hook OnGameModeInit()
 {
-{% for command in commands %}
-    command_{{command.name}}();
-{% endfor %}
+    {% for command in commands %}command_{{command.name}}();{% endfor %}
 }
