--- a/mrucznikctl/templates/modules.pwn.jinja2
+++ b/mrucznikctl/templates/modules.pwn.jinja2
@@ -19,21 +19,13 @@
 // Kod wygenerowany automatycznie narzędziem Mrucznik CTL
 
 //-------<[ .def ]>-------
-{% for module in modules %}}
-#include "{{module.name}}.def"
-{% endfor %}}
+{% for module in modules %}}#include "{{module.name}}.def"{% endfor %}}
 
 //-------<[ .hwn ]>-------
-{% for module in modules %}}
-#include "{{module.name}}.hwn"
-{% endfor %}}
+{% for module in modules %}}#include "{{module.name}}.hwn"{% endfor %}}
 
 //-------<[ .pwn ]>-------
-{% for module in modules %}}
-#include "{{module.name}}.pwn"
-{% endfor %}}
+{% for module in modules %}}#include "{{module.name}}.pwn"{% endfor %}}
 
 //-------<[ .commands ]>-------
-{% for module in modules %}}
-#include "{{module.name}}/commands/commands.pwn"
-{% endfor %}}
+{% for module in modules %}}#include "{{module.name}}/commands/commands.pwn"{% endfor %}}
