--- a/mrucznikctl/templates/command.pwn.jinja2
+++ b/mrucznikctl/templates/command.pwn.jinja2
@@ -27,10 +27,12 @@ command_{{name}}()
     new command = Command_GetId({{name}})
 
     //aliases
-    {% for alias in aliases %}Command_AddAlt(command, "{{alias}}");{% endfor %}
+    {% for alias in aliases %}Command_AddAlt(command, "{{alias}}");
+    {% endfor %}
 
     //permissions
-    {% for permission in permissions %}Group_SetCommand(Group_GetID("{{permission}}"), command, true);{% endfor %}
+    {% for permission in permissions %}{% if permission=='everyone' -%}Group_SetGlobalCommand(command, true);{% else %}Group_SetCommand(Group_GetID("{{permission}}"), command, true);{% endif %}
+    {% endfor %}
 }
 
 //-------<[ command ]>-------
