Generation and creation adjustments & fixes

--- a/mrucznikctl/templates/modules.pwn.jinja2
+++ b/mrucznikctl/templates/modules.pwn.jinja2
@@ -30,6 +30,6 @@
 {% for module in modules %}#include "{{module}}\{{module}}.pwn"
 {% endfor %}
 
-//-------<[ .commands ]>-------
+//-------<[ commands ]>-------
 {% for module in modules %}#include "{{module}}\commands\commands.pwn"
 {% endfor %}
