More groups & hook fix

--- a/mrucznikctl/templates/commands.pwn.jinja2
+++ b/mrucznikctl/templates/commands.pwn.jinja2
@@ -18,6 +18,8 @@
 //----------------------------------------------------*------------------------------------------------------//
 // Kod wygenerowany automatycznie narzędziem Mrucznik CTL
 
+#include <YSI\y_hooks>
+
 //-------<[ include ]>-------
 {% for command in commands %}#include "{{command}}\{{command}}.pwn"
 {% endfor %}
