--- a/mrucznikctl/templates/module.pwn.jinja2
+++ b/mrucznikctl/templates/module.pwn.jinja2
@@ -16,18 +16,18 @@
 //----[  |||             |||||             |||                |||       |||    |||                      ]----//
 //----[                                                                                                 ]----//
 //----------------------------------------------------*------------------------------------------------------//
+// Autor: {{author}}
+// Data utworzenia: {{date}}
 //Opis:
 /*
 	{{description}}
 */
-// Autor: {{author}}
-// Data utworzenia: {{date}}
 
 //
 
-//-----------------<[ Callbacki: ]>-------------------
+//-----------------<[ Callbacki: ]>-----------------
 //-----------------<[ Funkcje: ]>-------------------
+//-----------------<[ Timery: ]>-------------------
 //------------------<[ MySQL: ]>--------------------
-//-----------------<[ Komendy: ]>-------------------
 
 //end
