--- a/mrucznikctl/templates/modules.pwn.jinja2
+++ b/mrucznikctl/templates/modules.pwn.jinja2
@@ -19,17 +19,17 @@
 // Kod wygenerowany automatycznie narzędziem Mrucznik CTL
 
 //-------<[ .def ]>-------
-{% for module in modules %}#include "{{module}}\{{module}}.def"
+{% for module in modules %}#include "{{module.name}}\{{module.name}}.def"
 {% endfor %}
 
 //-------<[ .hwn ]>-------
-{% for module in modules %}#include "{{module}}\{{module}}.hwn"
+{% for module in modules %}#include "{{module.name}}\{{module.name}}.hwn"
 {% endfor %}
 
 //-------<[ .pwn ]>-------
-{% for module in modules %}#include "{{module}}\{{module}}.pwn"
+{% for module in modules %}#include "{{module.name}}\{{module.name}}.pwn"
 {% endfor %}
 
 //-------<[ commands ]>-------
-{% for module in modules %}#include "{{module}}\commands\commands.pwn"
-{% endfor %}
+{% for module in modules %}{% if module.commands -%}#include "{{module.name}}\commands\commands.pwn"
+{% endif %}{% endfor %}
