--- a/mrucznikctl/templates/command_impl.pwn.jinja2
+++ b/mrucznikctl/templates/command_impl.pwn.jinja2
@@ -23,7 +23,7 @@
 //
 
 //------------------<[ Implementacja: ]>-------------------
-command_{{name}}_Impl(playerid{% set comma = joiner(",") %}{% for parameter in parameters %}, {{parameter.name}}{% endfor %})
+command_{{name}}_Impl(playerid{% set comma = joiner(",") %}{% for parameter in parameters %}, {{parameter.variable}}{% endfor %})
 {% for line in code %}{{line}}{% endfor %}
 
 //end
