Add overwrite warning

--- a/mrucznikctl/templates/modules.pwn.jinja2
+++ b/mrucznikctl/templates/modules.pwn.jinja2
@@ -1,4 +1,4 @@
-//-----------------------------------------------<< Source >>------------------------------------------------//
+//------------------------------------------<< Generated source >>-------------------------------------------//
 //-----------------------------------------------[ Modules ]-------------------------------------------------//
 //----------------------------------------------------*------------------------------------------------------//
 //----[                                                                                                 ]----//
@@ -17,6 +17,15 @@
 //----[                                                                                                 ]----//
 //----------------------------------------------------*------------------------------------------------------//
 // Kod wygenerowany automatycznie narzędziem Mrucznik CTL
+
+// ================= UWAGA! =================
+//
+// WSZELKIE ZMIANY WPROWADZONE DO TEGO PLIKU
+// ZOSTANĄ NADPISANE PO WYWOŁANIU KOMENDY
+// > mrucznikctl build
+//
+// ================= UWAGA! =================
+
 
 //-------<[ .def ]>-------
 {% for module in modules %}#include "{{module.name}}\{{module.name}}.def"
