--- a/mrucznikctl/templates/command.pwn.jinja2
+++ b/mrucznikctl/templates/command.pwn.jinja2
@@ -1,4 +1,4 @@
-//-----------------------------------------------<< Source >>------------------------------------------------//
+//------------------------------------------<< Generated source >>-------------------------------------------//
 //{{ name | center(107) }}//
 //----------------------------------------------------*------------------------------------------------------//
 //----[                                                                                                 ]----//
@@ -17,6 +17,15 @@
 //----[                                                                                                 ]----//
 //----------------------------------------------------*------------------------------------------------------//
 // Kod wygenerowany automatycznie narzędziem Mrucznik CTL
+
+// ================= UWAGA! =================
+//
+// WSZELKIE ZMIANY WPROWADZONE DO TEGO PLIKU
+// ZOSTANĄ NADPISANE PO WYWOŁANIU KOMENDY
+// > mrucznikctl build
+//
+// ================= UWAGA! =================
+
 
 //-------<[ include ]>-------
 #include "{{name}}_impl.pwn"
