Adjust templates to pawn compatibility mode (-Z+)

--- a/mrucznikctl/templates/modules.pwn.jinja2
+++ b/mrucznikctl/templates/modules.pwn.jinja2
@@ -40,5 +40,5 @@
 {% endfor %}
 
 //-------<[ commands ]>-------
-{% for module in modules %}{% if module.commands -%}#include "{{module.name}}\commands\commands.pwn"
+{% for module in modules %}{% if module.commands -%}#include "{{module.name}}\commands\{{module.name}}_commands.pwn"
 {% endif %}{% endfor %}
