More module generation options (mysq, callbacks, timers & custom files)

--- a/mrucznikctl/templates/command.pwn.jinja2
+++ b/mrucznikctl/templates/command.pwn.jinja2
@@ -63,7 +63,7 @@ YCMD:{{name}}(playerid, params[], help)
     {% for parameter in parameters %}{% if parameter.type=='player' -%}
     if(!IsPlayerConnected({{parameter.name}}))
     {
-        sendErrorMessage(playerid, "Nie znaleziono gracza o nicku/id podanym w parametrze");
+        sendErrorMessage(playerid, "Nie znaleziono gracza o nicku/id podanym w parametrze.");
         return 1;
     }{% endif %}{% endfor %}
     //command body
