--- a/mrucznikctl/templates/module_callbacks.pwn.jinja2
+++ b/mrucznikctl/templates/module_callbacks.pwn.jinja2
@@ -1,4 +1,4 @@
-//-----------------------------------------------<< Source >>------------------------------------------------//
+//---------------------------------------------<< Callbacks >>-----------------------------------------------//
 //{{ name | center(107) }}//
 //----------------------------------------------------*------------------------------------------------------//
 //----[                                                                                                 ]----//
@@ -25,6 +25,6 @@
 
 //
 
-//-----------------<[ Funkcje: ]>-------------------
+//-----------------<[ Callbacki: ]>-----------------
 
 //end
