--- a/mrucznikctl/templates/module_timers.pwn.jinja2
+++ b/mrucznikctl/templates/module_timers.pwn.jinja2
@@ -1,4 +1,4 @@
-//-----------------------------------------------<< Source >>------------------------------------------------//
+//-----------------------------------------------<< Timers >>------------------------------------------------//
 //{{ name | center(107) }}//
 //----------------------------------------------------*------------------------------------------------------//
 //----[                                                                                                 ]----//
@@ -25,6 +25,6 @@
 
 //
 
-//-----------------<[ Funkcje: ]>-------------------
+//-----------------<[ Timery: ]>-------------------
 
 //end
