--- a/mrucznikctl/templates/module_mysql.pwn.jinja2
+++ b/mrucznikctl/templates/module_mysql.pwn.jinja2
@@ -1,4 +1,4 @@
-//-----------------------------------------------<< Source >>------------------------------------------------//
+//-----------------------------------------------<< MySQL >>-------------------------------------------------//
 //{{ name | center(107) }}//
 //----------------------------------------------------*------------------------------------------------------//
 //----[                                                                                                 ]----//
@@ -25,6 +25,6 @@
 
 //
 
-//-----------------<[ Funkcje: ]>-------------------
+//------------------<[ MySQL: ]>--------------------
 
 //end
