prefix commands with cmd_ so there are no conflicts with module with the same name

--- a/mrucznikctl/templates/commands.pwn.jinja2
+++ b/mrucznikctl/templates/commands.pwn.jinja2
@@ -30,7 +30,7 @@
 #include <YSI\y_hooks>
 
 //-------<[ include ]>-------
-{% for command in commands %}#include "{{command}}\{{command}}.pwn"
+{% for command in commands %}#include "{{command}}\cmd_{{command}}.pwn"
 {% endfor %}
 
 //-------<[ initialize ]>-------
